finishing training tutorial

--- a/mol2dreams/notebooks/molecule_feauturizer.ipynb
+++ b/mol2dreams/notebooks/molecule_feauturizer.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-10-07T09:20:40.162425Z",
-     "start_time": "2024-10-07T09:20:38.122898Z"
+     "end_time": "2024-10-10T10:22:21.420257Z",
+     "start_time": "2024-10-10T10:22:13.107062Z"
     }
    },
    "source": [
@@ -26,8 +26,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-07T09:20:40.182508Z",
-     "start_time": "2024-10-07T09:20:40.176052Z"
+     "end_time": "2024-10-10T10:22:21.432631Z",
+     "start_time": "2024-10-10T10:22:21.428359Z"
     }
    },
    "cell_type": "code",
@@ -69,8 +69,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-07T09:20:40.239556Z",
-     "start_time": "2024-10-07T09:20:40.235570Z"
+     "end_time": "2024-10-10T10:22:21.477859Z",
+     "start_time": "2024-10-10T10:22:21.473537Z"
     }
    },
    "cell_type": "code",
@@ -138,8 +138,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-07T09:20:40.244784Z",
-     "start_time": "2024-10-07T09:20:40.243068Z"
+     "end_time": "2024-10-10T10:22:21.541318Z",
+     "start_time": "2024-10-10T10:22:21.539471Z"
     }
    },
    "cell_type": "code",
@@ -154,8 +154,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-07T09:20:40.251165Z",
-     "start_time": "2024-10-07T09:20:40.249657Z"
+     "end_time": "2024-10-10T10:22:21.553578Z",
+     "start_time": "2024-10-10T10:22:21.551723Z"
     }
    },
    "cell_type": "code",
@@ -167,8 +167,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-07T09:21:08.771690Z",
-     "start_time": "2024-10-07T09:20:40.256022Z"
+     "end_time": "2024-10-10T10:22:50.410795Z",
+     "start_time": "2024-10-10T10:22:21.561682Z"
     }
    },
    "cell_type": "code",
@@ -180,8 +180,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-07T09:21:08.779386Z",
-     "start_time": "2024-10-07T09:21:08.777504Z"
+     "end_time": "2024-10-10T10:22:50.421257Z",
+     "start_time": "2024-10-10T10:22:50.419654Z"
     }
    },
    "cell_type": "code",
@@ -193,8 +193,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-07T09:23:24.492329Z",
-     "start_time": "2024-10-07T09:23:24.485773Z"
+     "end_time": "2024-10-10T10:22:50.435892Z",
+     "start_time": "2024-10-10T10:22:50.431749Z"
     }
    },
    "cell_type": "code",
@@ -208,13 +208,13 @@
    ],
    "id": "302cabf99239e9a",
    "outputs": [],
-   "execution_count": 12
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-07T09:23:25.063134Z",
-     "start_time": "2024-10-07T09:23:24.890468Z"
+     "end_time": "2024-10-10T10:22:50.660689Z",
+     "start_time": "2024-10-10T10:22:50.445173Z"
     }
    },
    "cell_type": "code",
@@ -230,7 +230,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Featurizing dataset: 100%|██████████| 50/50 [00:00<00:00, 295.81it/s]"
+      "Featurizing dataset: 100%|██████████| 50/50 [00:00<00:00, 284.37it/s]"
      ]
     },
     {
@@ -248,13 +248,13 @@
      ]
     }
    ],
-   "execution_count": 13
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-07T09:23:25.201044Z",
-     "start_time": "2024-10-07T09:23:25.198048Z"
+     "end_time": "2024-10-10T10:22:50.810282Z",
+     "start_time": "2024-10-10T10:22:50.804938Z"
     }
    },
    "cell_type": "code",
@@ -316,18 +316,18 @@
        " Data(x=[31, 84], edge_index=[2, 68], edge_attr=[68, 7], y=[1, 1024])]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 14
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-07T09:23:27.232879Z",
-     "start_time": "2024-10-07T09:23:25.801905Z"
+     "end_time": "2024-10-10T10:22:53.276361Z",
+     "start_time": "2024-10-10T10:22:50.861493Z"
     }
    },
    "cell_type": "code",
@@ -347,32 +347,60 @@
    "id": "a93cb800046f52e6",
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/macbook/UTILS/anaconda3/envs/mol2dreams/lib/python3.11/site-packages/torch_geometric/deprecation.py:26: UserWarning: 'data.DataLoader' is deprecated, use 'loader.DataLoader' instead\n",
+      "  warnings.warn(out)\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DataBatch(x=[752, 84], edge_index=[2, 1584], edge_attr=[1584, 7], y=[32, 1024], batch=[752], ptr=[33])\n",
+      "DataBatch(x=[762, 84], edge_index=[2, 1608], edge_attr=[1608, 7], y=[32, 1024], batch=[762], ptr=[33])\n",
       "Batch size: 32\n",
-      "Node feature shape: torch.Size([752, 84])\n",
-      "Edge index shape: torch.Size([2, 1584])\n",
-      "Edge feature shape: torch.Size([1584, 7])\n",
+      "Node feature shape: torch.Size([762, 84])\n",
+      "Edge index shape: torch.Size([2, 1608])\n",
+      "Edge feature shape: torch.Size([1608, 7])\n",
       "Spectrum embedding shape: torch.Size([32, 1024])\n"
      ]
     }
    ],
-   "execution_count": 15
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-07T09:21:10.694674Z",
-     "start_time": "2024-10-07T09:21:10.693319Z"
+     "end_time": "2024-10-10T10:23:24.464338Z",
+     "start_time": "2024-10-10T10:23:22.888947Z"
     }
    },
    "cell_type": "code",
-   "source": "",
+   "source": [
+    "for first in loader:\n",
+    "    print(first)\n",
+    "    print(first.y)\n",
+    "    break"
+   ],
    "id": "d0ed9f4d5064a9c9",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DataBatch(x=[752, 84], edge_index=[2, 1584], edge_attr=[1584, 7], y=[32, 1024], batch=[752], ptr=[33])\n",
+      "tensor([[0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "        ...,\n",
+      "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "        [0., 0., 0.,  ..., 0., 0., 0.]])\n"
+     ]
+    }
+   ],
+   "execution_count": 14
   },
   {
    "metadata": {
