adding normalized cosine to be tracked

--- a/mol2dreams/notebooks/model_training.ipynb
+++ b/mol2dreams/notebooks/model_training.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-10-10T09:54:59.761720Z",
-     "start_time": "2024-10-10T09:54:58.249537Z"
+     "end_time": "2024-10-13T13:03:38.363426Z",
+     "start_time": "2024-10-13T13:03:38.359996Z"
     }
    },
    "source": [
@@ -27,7 +27,7 @@
     ")\n"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 5
   },
   {
    "metadata": {
@@ -677,8 +677,36 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "",
-   "id": "23ee03a2068b03f7"
+   "source": [
+    "\n",
+    "with open(\"/mol2dreams/configs/local_config_global_feature_simple_dataset.yaml\") as stream:\n",
+    "    config = yaml.safe_load(stream)"
+   ],
+   "id": "2dc725847df537df"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "trainer = build_trainer_from_config(config)",
+   "id": "9c1863ba4a0dce79"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "trainer.test()",
+   "id": "bc47b03d207a3259"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "trainer.train()",
+   "id": "823a6ff29e84c758"
   },
   {
    "metadata": {},
@@ -686,20 +714,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "37abf70f20bf200c"
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-10-09T13:32:07.633628Z",
-     "start_time": "2024-10-08T14:28:26.011210Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "",
-   "id": "f23795aee443f1a1",
-   "outputs": [],
-   "execution_count": null
+   "id": "649c8db06b47631c"
   }
  ],
  "metadata": {
