chechking triplet constrastive dataset

--- a/mol2dreams/notebooks/TripletMagrinLoss_dataset_construction.ipynb
+++ b/mol2dreams/notebooks/TripletMagrinLoss_dataset_construction.ipynb
@@ -6,12 +6,11 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-10-09T14:42:48.539518Z",
-     "start_time": "2024-10-09T14:42:46.241128Z"
+     "end_time": "2024-10-14T08:42:50.854471Z",
+     "start_time": "2024-10-14T08:42:47.804727Z"
     }
    },
    "source": [
-    "\n",
     "from matchms.importing import load_from_mgf\n",
     "from mol2dreams.featurizer.featurize import MoleculeFeaturizer\n",
     "from mol2dreams.utils.data import construct_triplets, pre_featurize_molecules\n",
@@ -31,8 +30,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-09T14:42:48.545560Z",
-     "start_time": "2024-10-09T14:42:48.542860Z"
+     "end_time": "2024-10-14T08:43:05.449911Z",
+     "start_time": "2024-10-14T08:43:05.445633Z"
     }
    },
    "cell_type": "code",
@@ -62,8 +61,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-09T14:43:26.153084Z",
-     "start_time": "2024-10-09T14:42:48.581598Z"
+     "end_time": "2024-10-14T08:43:48.695048Z",
+     "start_time": "2024-10-14T08:43:10.773806Z"
     }
    },
    "cell_type": "code",
@@ -113,12 +112,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-09T14:43:30.581743Z",
-     "start_time": "2024-10-09T14:43:26.202080Z"
+     "end_time": "2024-10-14T09:00:51.926974Z",
+     "start_time": "2024-10-14T09:00:47.501794Z"
     }
    },
    "cell_type": "code",
    "source": [
+    "# Here is condition for\n",
     "triplets_df = construct_triplets(df)\n",
     "print(triplets_df.head())"
    ],
@@ -138,21 +138,21 @@
       "4  COC1=C2C3=C(C(=O)CC3)C(=O)OC2=C4[C@@H]5C=CO[C@...  MassSpecGymID0001358   \n",
       "\n",
       "  positive_ids                                       negative_ids  \n",
-      "0           []  [MassSpecGymID0221258, MassSpecGymID0194837, M...  \n",
-      "1           []  [MassSpecGymID0208532, MassSpecGymID0186514, M...  \n",
-      "2           []  [MassSpecGymID0219781, MassSpecGymID0219273, M...  \n",
-      "3           []  [MassSpecGymID0078540, MassSpecGymID0022545, M...  \n",
-      "4           []  [MassSpecGymID0209015, MassSpecGymID0209954, M...  \n"
+      "0           []  [MassSpecGymID0221255, MassSpecGymID0195900, M...  \n",
+      "1           []  [MassSpecGymID0218556, MassSpecGymID0218874, M...  \n",
+      "2           []  [MassSpecGymID0204692, MassSpecGymID0223906, M...  \n",
+      "3           []  [MassSpecGymID0226835, MassSpecGymID0092045, M...  \n",
+      "4           []  [MassSpecGymID0232803, MassSpecGymID0159715, M...  \n"
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 16
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-09T14:43:30.618242Z",
-     "start_time": "2024-10-09T14:43:30.606811Z"
+     "end_time": "2024-10-14T08:43:53.135211Z",
+     "start_time": "2024-10-14T08:43:53.121085Z"
     }
    },
    "cell_type": "code",
@@ -206,7 +206,7 @@
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 5
   },
   {
    "metadata": {},
@@ -217,8 +217,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-09T14:43:33.587730Z",
-     "start_time": "2024-10-09T14:43:30.643839Z"
+     "end_time": "2024-10-14T08:43:56.301072Z",
+     "start_time": "2024-10-14T08:43:53.160793Z"
     }
    },
    "cell_type": "code",
@@ -240,13 +240,13 @@
      ]
     }
    ],
-   "execution_count": 7
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-09T14:43:33.848698Z",
-     "start_time": "2024-10-09T14:43:33.615232Z"
+     "end_time": "2024-10-14T08:43:56.758362Z",
+     "start_time": "2024-10-14T08:43:56.329458Z"
     }
    },
    "cell_type": "code",
@@ -264,23 +264,23 @@
        "(213548, 1024)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 8
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-09T14:43:40.159629Z",
-     "start_time": "2024-10-09T14:43:33.876361Z"
+     "end_time": "2024-10-14T08:44:18.592037Z",
+     "start_time": "2024-10-14T08:44:02.852838Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "extra_features = ['COLLISION_ENERGY', 'adduct', 'precursor_mz']\n",
+    "extra_features = ['COLLISION_ENERGY', 'adduct', 'precursor_mz', 'INSTRUMENT_TYPE']\n",
     "# Prepare datasets\n",
     "datasets = prepare_datasets(\n",
     "    msdata=msdata, \n",
@@ -304,7 +304,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Featurizing train: 100%|██████████| 194119/194119 [00:04<00:00, 48336.96it/s]\n"
+      "Featurizing train: 100%|██████████| 194119/194119 [00:10<00:00, 18025.02it/s]\n"
      ]
     },
     {
@@ -318,43 +318,43 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Featurizing val: 100%|██████████| 19429/19429 [00:00<00:00, 50209.32it/s]\n"
+      "Featurizing val: 100%|██████████| 19429/19429 [00:02<00:00, 7871.15it/s] \n"
      ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-09T14:43:40.189930Z",
-     "start_time": "2024-10-09T14:43:40.187966Z"
+     "end_time": "2024-10-14T08:44:35.614889Z",
+     "start_time": "2024-10-14T08:44:35.612545Z"
     }
    },
    "cell_type": "code",
    "source": "train_data = datasets['train']",
    "id": "25f770538807fa62",
    "outputs": [],
-   "execution_count": 10
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-09T14:43:40.244249Z",
-     "start_time": "2024-10-09T14:43:40.216872Z"
+     "end_time": "2024-10-14T08:44:36.387508Z",
+     "start_time": "2024-10-14T08:44:36.352626Z"
     }
    },
    "cell_type": "code",
    "source": "identifier_to_data = {entry['IDENTIFIER']: entry for entry in train_data}",
    "id": "d4951a91e703a84e",
    "outputs": [],
-   "execution_count": 11
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-09T14:43:40.309691Z",
-     "start_time": "2024-10-09T14:43:40.280334Z"
+     "end_time": "2024-10-14T08:49:00.733725Z",
+     "start_time": "2024-10-14T08:49:00.707569Z"
     }
    },
    "cell_type": "code",
@@ -378,8 +378,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-09T14:43:40.363442Z",
-     "start_time": "2024-10-09T14:43:40.352355Z"
+     "end_time": "2024-10-14T08:49:03.939329Z",
+     "start_time": "2024-10-14T08:49:03.925181Z"
     }
    },
    "cell_type": "code",
@@ -408,8 +408,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-09T14:43:40.527284Z",
-     "start_time": "2024-10-09T14:43:40.478917Z"
+     "end_time": "2024-10-14T08:49:09.276812Z",
+     "start_time": "2024-10-14T08:49:09.219778Z"
     }
    },
    "cell_type": "code",
@@ -424,8 +424,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-09T14:43:40.644824Z",
-     "start_time": "2024-10-09T14:43:40.642283Z"
+     "end_time": "2024-10-14T08:49:10.432628Z",
+     "start_time": "2024-10-14T08:49:10.430184Z"
     }
    },
    "cell_type": "code",
@@ -482,14 +482,23 @@
     "    },\n",
     "    'feature_attributes': {\n",
     "        'atom_symbol': {\n",
-    "            'top_n_atoms': 42,        \n",
+    "            'top_n_atoms': 42,     \n",
     "            'include_other': True,    \n",
     "        },\n",
+    "\n",
     "    }\n",
+    "}\n",
+    "global_config = {\n",
+    "        'features': {\n",
+    "            'collision_energy': True,\n",
+    "            'adduct': True,\n",
+    "            'instrument_type': True,\n",
+    "            'precursor_mz': True\n",
+    "        }\n",
     "}\n",
     "\n",
     "spectrum_embedding_size = 1024 \n",
-    "featurizer = MoleculeFeaturizer(atom_config, bond_config, spectrum_embedding_size)\n"
+    "featurizer = MoleculeFeaturizer(atom_config, bond_config, global_config=global_config, spectrum_embedding_size=spectrum_embedding_size)"
    ],
    "id": "5c92cd860bd96a80",
    "outputs": [],
